Day 10: added google fonts

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,12 @@
+/* -- Body Reset -- */
+
+body {
+  overflow-x: hidden;
+  font-family: 'Roboto', sans-serif;
+}
+
 /*-- Bootstrap Mobile Gutter Fix --*/
+
 .row, .container-fluid {
   margin-left: 0px !important;
   margin-right: 0px !important;
