Day 13: toggle bar

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,6 +5,9 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+/*-- Two Column Section --*/
+
+
 /*-- Bootstrap Mobile Gutter Fix --*/
 
 .row, .container-fluid {
